--- a/styles.css
+++ b/styles.css
@@ -547,6 +547,28 @@ header {
     border-radius: 8px;
     z-index: -1;
 }
+.about-olgaImage {
+    background-color: var(--gray-medium);
+    border-radius: 12px;
+    background-image: url('Images/FotoOlga.jpg');
+    background-size: cover;
+    background-position: center;
+    z-index: 1;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    height: 500px;
+    min-height: 500px;
+}
+.about-ourstory {
+      max-width: 600px;
+  font-size: 1rem;
+  line-height: 1.6;
+}
+.ourstory {
+  display: flex;
+  align-items: flex-start;    /* aligns image and paragraph to the top */
+  gap: 30px;                  /* spacing between image and paragraph */
+  padding: 20px;
+}
 /* Our Story Page Specific Styles */
 
 /* Quote Section */
