--- a/styles.css
+++ b/styles.css
@@ -295,7 +295,6 @@ header {
         padding-bottom: 10px;
         padding-top: 10px;
     }
-
     .main-nav.active {
         display: block; /* Show navigation when active */
     }
@@ -745,15 +744,17 @@ header {
 
 .slide img {
     width: 100%;
-    height: auto;
+    height: 500px;
     display: block;
 }
 
 .slide-caption {
     text-align: center;
+    align-items: center;
     padding: 15px;
     background-color: var(--light-color);
     color: var(--text-color);
+    height: 80px;
 }
 
 .prev, .next {
