--- a/styles.css
+++ b/styles.css
@@ -895,6 +895,7 @@ header {
 .events-grid {
   margin: 0 auto;
   display: flex;
+
   flex-direction: column;
   gap: 20px;
   padding: 0 1rem 3rem 1rem;
@@ -904,34 +905,19 @@ header {
     padding: 80px 5%;
 }
 
-.event-card {
-  background: white;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  transition: transform 0.2s ease;
+.event-content {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    margin-bottom: 30px;
+    background-color: var(--light-color);
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    transition: var(--transition);
 }
 
-.event-card img {
-  width: 250px;
-  height: 100%;
-  object-fit: cover;
-  flex-shrink: 0
-}
 
-.event-title {
-  font-size: 1.1rem;
-  margin-bottom: 0.5px;
-  font-weight: bold;
-}
-.view-all {
-    display: block;
-    margin: 30px auto 0;
-    text-align: center;
-    max-width: 200px;
-}
 .event-date {
     display: flex;
     flex-direction: column;
@@ -953,21 +939,17 @@ header {
     font-weight: 500;
 }
 
+.event-title {
+  font-size: 1.1rem;
+  margin-bottom: 0.5px;
+  font-weight: bold;
+}
+
 .event-info {
     padding: 20px;
     flex-grow: 1;
 }
 
-.event-info h4 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-    color: var(--primary-color);
-}
-
-.event-info p {
-    margin-bottom: 15px;
-    color: var(--gray-dark);
-}
 .event-price {
     margin-bottom: 15px;
     color: var(--gray-dark);
