--- a/styles.css
+++ b/styles.css
@@ -574,6 +574,14 @@ header {
   gap: 50px;                  /* spacing between image and paragraph */
 
 }
+/* Our Partners Page */
+.olga-chambira {
+    width: 5000px;
+    height: 730px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
 
 /* Upcoming events index page */
 .upcoming-events {
