--- a/styles.css
+++ b/styles.css
@@ -628,7 +628,7 @@ header {
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
 }
-
+/* Store locator - button */
 /* Our Story Page Specific Styles */
 
 /* Quote Section */
