--- a/styles.css
+++ b/styles.css
@@ -1626,8 +1626,8 @@ footer {
         text-align: left;
     }
 }
-/*Map Section - communities*/
-#map {
+/*Map Section - communities + stores*/
+#leaflet-map {
   width: 100%;
   height: 100vh;
 }
@@ -1637,6 +1637,10 @@ footer {
   padding: 6px 10px;
   border-radius: 4px;
   font-size: 14px;
+}
+.map-section {
+  margin: 0;
+  padding: 0;
 }
 /* Collection */
 
