--- a/styles.css
+++ b/styles.css
@@ -1631,12 +1631,18 @@ footer {
   width: 100%;
   height: 100vh;
 }
-.leaflet-tooltip {
-  background-color: rgba(0, 0, 0, 0.75);
-  color: #7c4a60;
-  padding: 6px 10px;
-  border-radius: 4px;
+.leaflet-popup-content {
+    margin: 0;
+    line-height: 1.4;
+}
+.custom-tooltip {
+  background-color: #fff;
+  color: #333;
+  border-radius: 10px;
+  padding: 12px 16px;
+  max-width: 300px;
   font-size: 14px;
+  line-height: 1.5;
 }
 .map-section {
   margin: 0;
