--- a/styles.css
+++ b/styles.css
@@ -1432,7 +1432,9 @@ footer {
 .social-media-icon.facebook {
     background-color: #3b5998;
 }
-
+.social-media-icon.whatsapp {
+    background-color: #25D366; 
+}
 
 /* Contact Form Styles */
 .form-row {
