--- a/styles.css
+++ b/styles.css
@@ -437,7 +437,7 @@ header {
     background-image: url('Images/Wallets.jpg');
 }
 .product3-img{
-    background-image: url('Images/slippers-chambira.jpg');
+    background-image: url('Images/slippers.jpg');
 }
 .item-tag {
     position: absolute;
